# ocsf-proto-gen

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  validate-codeowners.yml
src/: codegen.rs  main.rs  type_map.rs
tests/: integration.rs
