[package]
name = "ocsf-proto-gen"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Generate Protocol Buffer definitions from OCSF (Open Cybersecurity Schema Framework) JSON schema"
repository = "https://github.com/1898andCo/ocsf-proto-gen"
homepage = "https://github.com/1898andCo/ocsf-proto-gen"
readme = "README.md"
keywords = ["ocsf", "protobuf", "code-generation", "cybersecurity", "schema"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[lib]
name = "ocsf_proto_gen"
path = "src/lib.rs"

[[bin]]
name = "ocsf-proto-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = ["download"]
download = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
